Villanova_Dev1/src/objects/VEM_Resource__c.object
<CustomObject>
    <description>List of resources that can be reserved for an event at Villanova University</description>
    <fields>
        <fullName>Approver__c</fullName>
        <inlineHelpText>Enter the person who will approve/reject reservations for this resource (leave blank for auto-approval)</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resource_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Contact__c</fullName>
        <inlineHelpText>Enter name, address, phone, website, etc. for this resource</inlineHelpText>
        <label>External Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <inlineHelpText>Enter the available quantity for this resource</inlineHelpText>
        <label>Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Resource Type</label>
        <picklist>
            <picklistValues>
                <fullName>Audio-Visual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Equipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Resource_Type__c</columns>
        <columns>Approver__c</columns>
        <columns>External_Contact__c</columns>
        <columns>Inventory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Inventory_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Inventory__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Inventory__c</errorDisplayField>
        <errorMessage>Value must be a positive number</errorMessage>
    </validationRules>
</CustomObject>